--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='ru'>
 <head>
+    <body style="text-align: center">
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -11,7 +12,7 @@
 
 </style>
 <body>
-    <h1 style="color: red">Мир пончиков</h1>
+    <h1 style="color: black">Мир пончиков</h1>
     <img src="/uploads/2023/02/donut.png">
 </body>
 </html>
